[IMP] mrp,{purchase_,}stock: add dynamic placeholders to RR view
When creating a replenishment, certain fields are allowed to be empty.
Later, when the replenishment is executed, Odoo uses default values for
those fields to finish the process. In this task, those default values
are used to display dynamic placeholders, so that users can determine
which route, BoM, Vendor, and UoM will be taken into account.

closes odoo/odoo#220067

Task: 4643663
Related: odoo/upgrade#8171
Signed-off-by: Quentin Wolfs (quwo) <quwo@odoo.com>

--- a/addons/mrp/views/stock_orderpoint_views.xml
+++ b/addons/mrp/views/stock_orderpoint_views.xml
@@ -7,7 +7,8 @@
         <field name="arch" type="xml">
             <field name="route_id" position="after">
                 <field name="show_bom" column_invisible="True"/>
-                <field name="bom_id" optional="hide" invisible="not show_bom" context="{'default_product_tmpl_id': product_tmpl_id, 'display_bom_uom_qty': True}"/>
+                <field name="bom_id_placeholder" column_invisible="True"/> <!-- Needed for the placeholder widget -->
+                <field name="bom_id" widget="stock.forced_placeholder" optional="hide" invisible="not show_bom" context="{'default_product_tmpl_id': product_tmpl_id, 'display_bom_uom_qty': True}" options="{'placeholder_field': 'bom_id_placeholder'}" decoration-muted="not bom_id"/>
             </field>
         </field>
     </record>
