--- a/addons/stock/views/stock_orderpoint_views.xml
+++ b/addons/stock/views/stock_orderpoint_views.xml
@@ -31,6 +31,8 @@
                 <field name="product_category_id" column_invisible="True"/>
                 <field name="product_tmpl_id" column_invisible="True"/>
                 <field name="unwanted_replenish" column_invisible="True"/>
+                <field name="route_id_placeholder" column_invisible="True"/> <!-- Needed for the placeholder widget -->
+                <field name="replenishment_uom_id_placeholder" column_invisible="True"/> <!-- Needed for the placeholder widget -->
                 <field name="product_id" readonly="product_id" force_save="1" context="{'default_is_storable': True}"/>
                 <field name="location_id" options="{'no_create': True}" groups="stock.group_stock_multi_locations"/>
                 <field name="warehouse_id" options="{'no_create': True}" groups="stock.group_stock_multi_warehouses" optional="hide"/>
@@ -38,14 +40,14 @@
                 <field name="qty_forecast" force_save="1"/>
                 <button name="action_product_forecast_report" type="object" icon="fa-area-chart" title="Forecast Report" invisible="not id or unwanted_replenish"/>
                 <button name="action_product_forecast_report" type="object" icon="fa-warning text-warning" title="Due to receipts scheduled in the future, you might end up with excessive stock . Check the Forecasted Report  before reordering" invisible="not id or not unwanted_replenish"/>
-                <field name="route_id" options="{'no_create': True, 'no_open': True}" optional="hidden"/>
+                <field name="route_id" widget="stock.forced_placeholder" options="{'no_create': True, 'no_open': True, 'placeholder_field': 'route_id_placeholder'}" optional="hidden" decoration-muted="not route_id"/>
                 <button name="action_stock_replenishment_info" type="object" icon="fa-info-circle" title="Replenishment Information" invisible="not id or show_supply_warning"/>
                 <button name="action_stock_replenishment_info" type="object" icon="fa-warning text-warning" title="Your product is missing a way to be replenished (Route, Vendor, Bill of Materials)." invisible="not (id and show_supply_warning)"/>
                 <field name="trigger" optional="hide"/>
                 <field name="group_id" optional="hide" groups="stock.group_adv_location"/>
                 <field name="product_min_qty" string="Min" optional="show"/>
                 <field name="product_max_qty" string="Max" optional="show"/>
-                <field name="replenishment_uom_id" options="{'no_create': True}" optional="hide"/>
+                <field name="replenishment_uom_id" widget="stock.forced_placeholder" options="{'no_create': True, 'placeholder_field': 'replenishment_uom_id_placeholder'}" optional="hide" decoration-muted="not replenishment_uom_id"/>
                 <field name="qty_to_order" readonly="trigger == 'auto'"/>
                 <field name="qty_to_order_manual" column_invisible="True"/>
                 <button name="action_remove_manual_qty_to_order" type="object" icon="fa-undo" title="Remove manually entered value and replace by the quantity to order based on the forecasted quantities" invisible="not qty_to_order_manual"/>
@@ -70,6 +72,7 @@
             <search string="Replenishment Report Search">
                 <field name="product_id"/>
                 <field name="product_category_id"/>
+                <field name="effective_route_id" string="Route"/>
                 <field name="group_id" groups="stock.group_adv_location"/>
                 <field name="warehouse_id" groups="stock.group_stock_multi_warehouses"/>
                 <field name="location_id" groups="stock.group_stock_multi_locations"/>
