--- a/addons/purchase_stock/views/stock_orderpoint_views.xml
+++ b/addons/purchase_stock/views/stock_orderpoint_views.xml
@@ -3,10 +3,11 @@
     <record model="ir.ui.view" id="warehouse_orderpoint_search_inherit">
         <field name="name">stock.warehouse.orderpoint.search.inherit</field>
         <field name="model">stock.warehouse.orderpoint</field>
-        <field name="inherit_id" ref="stock.warehouse_orderpoint_search"/>
+        <field name="inherit_id" ref="stock.stock_reorder_report_search"/>
         <field name="arch" type="xml">
-            <xpath expr="//filter[@name='product']" position="after">
-                <filter string="Product Supplier" name="product_supplier" domain="[]" context="{'group_by': 'product_supplier_id'}"/>
+            <xpath expr="//field[@name='product_category_id']" position="after">
+                <field string="Vendor" name="effective_vendor_id"/>
+                <field name="available_vendor"/>
             </xpath>
         </field>
     </record>
