[IMP] sale_project,sale_timesheet: improve project creation flow from Sale Order
Before this commit:
- When a Sale Order (SO) had a service product that created both a project and
  task, two stat buttons were shown on the SO project and another was task.
- If you confirmed an SO with service product and then clicked "Create Project"
  from the action menu, it would always create a normal project, no option to
  create project based on project template.

After this commit:
- The task button has been removed from the SO. Now, only the project button is
  shown to keep things simple.
- When you confirm a Sale Order and then create a project from it, a wizard will
  appear. And in this you can also choose a project template.
- If you select a template, the project will be created based on that template.
- If you don’t select any template, a regular project will be created instead.

task-4946932

--- a/addons/sale_project/views/sale_order_views.xml
+++ b/addons/sale_project/views/sale_order_views.xml
@@ -16,7 +16,20 @@
                     invisible="not show_project_button"
                     groups="project.group_project_user"
                 >
-                    <field name="project_count" widget="statinfo" string="Projects"/>
+                    <div class="o_stat_info">
+                        <div class="o_row">
+                            <span class="o_stat_value order-first">
+                                <field name="project_count"/>
+                            </span>
+                            <span class="o_stat_text"> Projects</span>
+                        </div>
+                        <div class="o_row">
+                            <span class="o_stat_value order-first">
+                                <field name="tasks_count"/>
+                            </span>
+                            <span class="o_stat_text"> Tasks</span>
+                        </div>
+                    </div>
                 </button>
                 <button
                     name="action_view_milestone"
@@ -27,22 +40,6 @@
                     groups="project.group_project_milestone"
                 >
                     <field name="milestone_count" widget="statinfo" string="Milestones"/>
-                </button>
-                <button
-                    name="action_view_task"
-                    type="object"
-                    class="oe_stat_button"
-                    icon="fa-check"
-                    invisible="not show_task_button"
-                    groups="project.group_project_user"
-                >
-                    <div class="o_field_widget o_stat_info">
-                        <span class="o_stat_text">Tasks</span>
-                        <span class="o_stat_value">
-                            <field name="closed_task_count"/> / <field name="tasks_count"/>
-                            (<field name="completed_task_percentage" widget="percentage" options="{'digits': [1, 0]}"/>)
-                        </span>
-                    </div>
                 </button>
             </button>
             <field name="journal_id" position="before">
