--- a/addons/sale_timesheet/views/sale_order_views.xml
+++ b/addons/sale_timesheet/views/sale_order_views.xml
@@ -6,7 +6,7 @@
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale_project.view_order_form_inherit_sale_project"/>
         <field name="arch" type="xml">
-            <button name="action_view_task" position="after">
+            <button name="action_view_milestone" position="before">
                 <button
                     name="action_view_timesheet"
                     type="object"
