[IMP] product, sale, website_sale, point_of_sale: simplify variant setup
This commit will overhaul product variant setup:
- Allow managing product variants from the list directly
  instead of from a form
- Simplify exclusions: users can now only exclude values on
  the same product and not on optional products
- Allow users to show/hide the extra added price separately
  on the shop page for specific product variants

Users used to be able to exclude values for optional products not just
the same product they're editing, and this was removed to simplify the
flow for setting up variants and also because users could still add
the excluded values of the order product simply by adding them in a
new order line.

Because we don't need to keep track of exclusions across different
products, exclusions were simplified and they are now simply just a
many2many field instead of a whole separate model.

task-4731792

--- a/addons/product/views/product_attribute_value_views.xml
+++ b/addons/product/views/product_attribute_value_views.xml
@@ -12,4 +12,41 @@
         </field>
     </record>
 
+    <record id="product_attribute_value_form" model="ir.ui.view">
+        <field name="name">product.attribute.value.form</field>
+        <field name="model">product.attribute.value</field>
+        <field name="arch" type="xml">
+            <form string="Attribute Value">
+                <div class="row">
+                    <div class="col col-8">
+                        <group>
+                            <field name="attribute_id" invisible="True"/>
+                            <field name="name" string="Name"/>
+                            <field
+                                name="is_custom"
+                                width="120px"
+                                invisible="display_type == 'multi'"
+                            />
+                            <field
+                                name="html_color"
+                                widget="color"
+                                invisible="display_type != 'color' or image"
+                            />
+                            <field name="default_extra_price"/>
+                        </group>
+                    </div>
+                    <div class="col col-4">
+                        <field
+                            name="image"
+                            widget="image"
+                            options="{'size': [70, 70]}"
+                            class="oe_avatar float-none"
+                            invisible="display_type not in ['color', 'image']"
+                        />
+                    </div>
+                </div>
+            </form>
+        </field>
+    </record>
+
 </odoo>
