--- a/addons/product/views/product_template_views.xml
+++ b/addons/product/views/product_template_views.xml
@@ -93,7 +93,19 @@
                             <field name="value_count" column_invisible="True"/>
                             <field name="sequence" widget="handle"/>
                             <field name="attribute_id" readonly="id"/>
-                            <field name="value_ids" widget="many2many_tags" options="{'no_create_edit': True, 'color_field': 'color'}" context="{'default_attribute_id': attribute_id, 'show_attribute': False}"/>
+                            <field
+                                    name="value_ids"
+                                    widget="many2many_tags"
+                                    options="{
+                                        'edit_tags': True,
+                                        'color_field': 'color',
+                                    }"
+                                    context="{
+                                        'default_attribute_id': attribute_id,
+                                        'show_attribute': False,
+                                        'form_view_ref': 'product.product_attribute_value_form',
+                                    }"
+                            />
                             <button string="Configure" class="float-end btn-secondary"
                                 type="object" name="action_open_attribute_values"
                                 groups="product.group_product_variant"/>
