[IMP] stock, *: remove stock.package_level
As packages are now always handled on the move lines, we don't need the
`stock.package_level` model anymore. This means we're no longer
separating moves with/without packages.

Task-4314600

closes odoo/odoo#203987

Related: odoo/enterprise#82453
Related: odoo/upgrade#7576
Signed-off-by: Arnold Moyaux (arm) <arm@odoo.com>

--- a/addons/l10n_tr_nilvera_edispatch/templates/l10n_tr_nilvera_edispatch.xml
+++ b/addons/l10n_tr_nilvera_edispatch/templates/l10n_tr_nilvera_edispatch.xml
@@ -183,7 +183,7 @@
                 </cac:TransportHandlingUnit>
             </cac:Shipment>
             <t t-set="line_id" t-value="1"/>
-            <t t-foreach="picking.move_ids_without_package" t-as="line">
+            <t t-foreach="picking.move_ids" t-as="line">
                 <t t-call="l10n_tr_nilvera_edispatch.nilvera_dispatch_line"/>
                 <t t-set="line_id" t-value="line_id + 1"/>
             </t>
