[IMP] purchase_stock: Suggest UX - Search Panel UI
In this first commit we remove all purchase.order.suggest front end code and setup a
hard coded Suggest UI JS component, by:

    - Extending the purchaseProductCatalogKanbanView to override Search Panel
(for now only the SearchPanel but later the KanbanController, KanbanRenderer ...).
    - Patching the search panel template to x-path the Suggest UI above ALL other Search
Panel sections (eg. product category filter).
     - Changing the product_view product_view_kanban_catalog_purchase_only to inherit from
purchase instead of stock to avoid redifing the js class // kanban attr.

Part-of: odoo/odoo#215363
Related: odoo/enterprise#93300
Related: odoo/upgrade#8104
Signed-off-by: Steve Van Essche <svs@odoo.com>

--- a/addons/purchase_stock/views/product_views.xml
+++ b/addons/purchase_stock/views/product_views.xml
@@ -3,13 +3,9 @@
     <record id="product_view_kanban_catalog_purchase_only" model="ir.ui.view">
         <field name="name">product.view.kanban.catalog.purchase_stock</field>
         <field name="model">product.product</field>
-        <field name="inherit_id" ref="stock.product_view_kanban_catalog"/>
+        <field name="inherit_id" ref="purchase.product_view_kanban_catalog_purchase_only"/>
         <field name="mode">primary</field>
         <field name="arch" type="xml">
-            <xpath expr="//kanban" position="attributes">
-                    <attribute name="js_class">purchase_product_kanban_catalog</attribute>
-                    <attribute name="sample">1</attribute>
-            </xpath>
             <field name="id" position="after">
                 <field name="type"/>
                 <field name="qty_available"/>
