[IMP] purchase_stock: Suggest UX - Replacing wizard UI
Keeping the backend wizard logic untouched, in this commit a controller is created to instantiate and
sync the purchase_order_suggest backend wizard from new custom JS front-end. More precisily:

    - Backend wizard state are replicated in a hook (use_purchase_order_suggest), using an rpc to
instantiate the transient backend model (keeping tests intact).
     - The hook exposes the states trough a subEnv available to KanbanController childs
(KanbanSearchPanel only for now, but also KanbanRenderer ... later).
     - The hook also watches any state changes on the input of the backend model (number_of_days,
based_on ...) and calls an RPC to sync model and UX (write + read) on change.

Additionnaly, the logic of warehouse selection is removed from the new UI and linked to the PO
warehouse (ie. now to change suggestion for another WH, user as to change PO delivery).

Part-of: odoo/odoo#215363
Related: odoo/enterprise#93300
Related: odoo/upgrade#8104
Signed-off-by: Steve Van Essche <svs@odoo.com>

--- a/addons/purchase_stock/static/src/product_catalog/search/search_panel.scss
+++ b/addons/purchase_stock/static/src/product_catalog/search/search_panel.scss
@@ -1,13 +1,27 @@
-.o_component_with_search_panel {
-    .o_PurchaseSuggestInput {
-        background-color: #fff;
+.o_component_with_search_panel .o_suggest_feature {
+    .o_select_menu .o_input {
+        border: 0 !important
+    }
+
+    .o_select_menu,.o_input_dropdown,.o_PurchaseSuggestInput {
+        background-color: $o-view-background-color;
         font-size: .75rem;
+        border: 0;
+        box-shadow: none;
         padding: .25rem .25rem;
         margin: 0 .25rem;
-        border: 0;
-        border-bottom: .05rem solid #000;
+        border-bottom: $border-width solid $o-black !important;
         border-radius: 0;
-        color: #000;
+        color: $o-black;
+        background-position: right 0 center;
+        background-size: .5rem;
+    }
+
+    .o_select_menu,.o_input_dropdown {
+        width: 7rem;
+    }
+    
+    .o_PurchaseSuggestInput {
         text-align: right;
         width: 2rem;
     }
