--- a/addons/mrp/views/mrp_bom_views.xml
+++ b/addons/mrp/views/mrp_bom_views.xml
@@ -156,8 +156,7 @@
                                     <div>
                                         <field name="days_to_prepare_mo" class="oe_inline"/> days
                                         <button name="action_compute_bom_days" string="Compute" type="object"
-                                                help="Compute the days required to resupply all components from BoM, by either buying or manufacturing the components and/or subassemblies.
-                                                      Also note that purchase security lead times will be added when appropriate."
+                                                help="Compute the days required to resupply all components from BoM, by either buying or manufacturing the components and/or subassemblies."
                                                 class="oe_link pt-0"/>
                                     </div>
                                 </group>
