[IMP] mail, mail_bot: clean ux of canned responses
Purpose of this Commit:
Cleans the UX of Canned Responses

This commit introduces:
- Renamed discuss menu item Channel to `Channels`.
- Renamed filters: My canned responses → `Private`, Shared canned responses → `Shared`.
- Added widget for source (shortcut) `::`
- Added a placeholder for shortcut and substitution fields
- Added a hover on substitution text in kanban view
- Added a group by filter on Authorized Groups.
- Added a kanban view for mobile.
- Removed the default ordering/filter.
- Modified admin access rules to hide private responses of other users.
- Users can only select groups they are part of when assigning authorized
groups to a canned response.
- Performed minor cleanup `:` -> `::`.

task-4967078

--- a/addons/mail/views/mail_menus.xml
+++ b/addons/mail/views/mail_menus.xml
@@ -16,7 +16,7 @@
     />
     <menuitem
         id="mail.menu_channel"
-        name="Channel"
+        name="Channels"
         parent="mail.menu_root_discuss"
         action="mail.discuss_channel_action"
         sequence="2"
