--- a/addons/html_builder/static/src/core/building_blocks/builder_row.scss
+++ b/addons/html_builder/static/src/core/building_blocks/builder_row.scss
@@ -74,6 +74,13 @@
         }
     }
 
+    .icon-sup {
+        position: relative;
+        top: -0.4em;
+        margin-left: 0.2em;
+        font-size: 0.65em;
+    }
+
     &:has(> div > .o_cc_preview_wrapper) > .o_hb_collapse_toggler {
         align-self: center;
     }
