[IMP] website_sale: introduce shop and categories options
This commit introduces options for the categories and /shop page.

Feature:
- Create category specific options
- Opt. Show/Hide title on categories and /shop (categories title hidden
by default)
- Opt. Center Content (title, desc, filmstrip) on categories & /shop
- Opt. Show/Hide description on categories

- Slightly reduced the filmstrip margin bottom (-4px)

Note: since we now have an option to center the filmstrip, `w-100` is
not viable to solve the rendering on safari. This bug was due to a
miscalculation of the `flex-basis`, we now use a width instead.

task-4711722

Part-of: odoo/odoo#221243
Signed-off-by: Valentin Chevalier <vcr@odoo.com>

--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -82,10 +82,62 @@
         .o_pricelist_dropdown + .o_sortby_dropdown {
             margin-left: map-get($spacers, 2) * -1;
         }
-        // Hide empty category description in not-edition mode
-        @at-root body:not(.editor_enable) #category_header {
-            &:has(> br:first-child:last-child), &:empty {
-                display: none;
+
+        &.o_wsale_products_header_is_category {
+            &:where(:not(.o_wsale_products_header_show_category_title)) {
+                .o_wsale_category_title:where(:not(.o_wsale_category_title_is_search)) {
+                    display: none !important;
+                }
+            }
+
+            &:where(:not(.o_wsale_products_header_show_category_description)) {
+                .o_wsale_category_description {
+                    display: none !important;
+                }
+            }
+
+            &:where(.o_wsale_products_header_category_center_content) {
+                .o_wsale_category_title {
+                    align-self: center;
+                }
+
+                .o_wsale_category_description:where(:not(:has(section[class*="s_"]))) {
+                    align-self: center;
+                    text-align: center;
+                    max-width: 38rem;
+                }
+
+                #o_wsale_categories_filmstrip {
+                    justify-content: center;
+                }
+            }
+        }
+
+        &.o_wsale_products_header_is_shop {
+            &:where(:not(.o_wsale_products_header_show_shop_title)) {
+                .o_wsale_shop_title {
+                    display: none !important;
+                }
+            }
+
+            &:where(.o_wsale_products_header_shop_center_content) {
+                .o_wsale_shop_title {
+                    align-self: center;
+                }
+
+                #o_wsale_categories_filmstrip {
+                    justify-content: center;
+                }
+            }
+        }
+
+        // Hide empty dropzones when no dropzone are dragged.
+        @at-root body:where(:not(.oe_dropzone_active)) {
+            #category_header,
+            #oe_structure_products_header_shop {
+                &:has(> br:first-child:last-child), &:empty {
+                    display: none;
+                }
             }
         }
     }
@@ -344,7 +396,7 @@
         // <- End filmstrip design variations
 
         .o_wsale_filmstrip_wrapper {
-            margin-bottom: map-get($spacers, 2);
+            margin-bottom: map-get($spacers, 1);
             border-width: var(--o-wsale-filmstrip-wrapper-border-width, 0);
             border-style: solid;
             border-color: $border-color;
@@ -363,8 +415,7 @@
                 width: max-content;
 
                 li {
-                    flex: 0 0 var(--o-wsale-filmstrip-item-width, auto);
-                    min-width: 0;
+                    width: var(--o-wsale-filmstrip-item-width, auto);
                     aspect-ratio: var(--o-wsale-filmstrip-item-aspect-ratio, unset);
 
                     @include media-breakpoint-down (md) {
@@ -460,7 +511,7 @@
             }
 
             &:hover .o_wsale_filmstrip_wrapper {
-                margin-bottom: map-get($spacers, 1);
+                margin-bottom: 0;
 
                 &::-webkit-scrollbar {
                     height: 6px;
