[FIX] website_sale: avoid relying on icon in +/- button on product page
The implementation of `_onChangeQuantity` in `website_sale.js` was not
robust to changes in its buttons.

Removing the icon caused a crash when the button is used, and the icons
cannot be added back the same way.

With this commit, the order of the button is used to tell whether it
should increment

Steps to reproduce:
- On `/shop/<product>`, open website builder
- Click on the "-" icon near the "Add to cart" button
- Delete it (press delete)
- Save
- Click the button
- Bug: crash because it did not find the icon

task-4367641

--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -2462,6 +2462,7 @@
                     class="css_quantity_minus btn btn-link pe-2 js_add_cart_json border-0"
                     aria-label="Remove one"
                     title="Remove one"
+                    name="remove_one"
                 >
                     <i class="oi oi-minus text-600"/>
                 </a>
