[IMP] (purchase_)stock,mrp(_subcontracting): rework RR wizard
We are adding the following changes
- add BOM tab, it serves the same way as the vendor tab
- add intermediary dates between lead times on the wizard table
- new info message at the top
- make UOM not clickable
- fix column width for last_purchase_date and delay
- hide the sequence column

task 4779169

--- a/addons/stock/wizard/stock_replenishment_info.xml
+++ b/addons/stock/wizard/stock_replenishment_info.xml
@@ -7,6 +7,9 @@
             <form>
                 <field name="orderpoint_id" invisible="1"/>
                 <field name="qty_to_order" invisible="1"/>
+                <div class="alert alert-info" role="alert">
+                    <span>When the stock level at the forecasted date is below the minimum (<field name="product_min_qty"/> <field name="product_uom_name"/>), a replenishment must be done to reach the maximum level of stock (<field name="product_max_qty"/> <field name="product_uom_name"/>).</span>
+                </div>
                 <group>
                     <group>
                         <field nolabel="1" name="json_lead_days" colspan="2" widget="lead_days_widget"/>
