[FIX] website: improve footer slideout behavior and option layout
Before this commit:
The footer slideout effect did not work properly when we first changed
footer slideout option. Adding a snippet larger than the body content
caused the slideout to behave unexpectedly.

After this commit:
The footer slideout effect works as expected. In addition, a tooltip has
been added to the page visibility option, and the footer option layout
has been improved for better usability.

task-4991435

closes odoo/odoo#221893

Signed-off-by: Serge Bayet (seba) <seba@odoo.com>

--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -2004,6 +2004,9 @@
     <xpath expr="//footer[@id='bottom']" position="attributes">
         <attribute name="t-attf-class" add="o_footer_slideout" separator=" "/>
     </xpath>
+    <xpath expr="//div[@id='wrapwrap']" position="attributes">
+        <attribute name="t-attf-class" add="o_footer_effect_enable" separator=" "/>
+    </xpath>
 </template>
 
 <!-- Hide Copyright -->
