[IMP] purchase_stock: Suggest UX - Save vendor defaults
Saves default suggest values (per vendor) when using the "Add
All" button, and only display suggest for draft POs

WHY:
- Defaults save time for purchase officers who regularly use
suggestions.
 - Removing suggestions for the non-draft PO prevents "Add all"
button from raising a traceback (not suppose to edit PO lines
of confirmed orders).

task#4783508

--- a/addons/purchase_stock/static/src/product_catalog/record/kanban_record.scss
+++ b/addons/purchase_stock/static/src/product_catalog/record/kanban_record.scss
@@ -1,4 +1,5 @@
 .o_purchase_product_kanban_catalog_view .o_kanban_record.o_suggest_highlight {
     background-color: $o-component-active-bg;
+    z-index: 3;  // Makes sure bottom border in groupby view is above
     border-color: $o-component-active-border;
 }
