[IMP] point_of_sale, pos_*: Revamp sequence management in POS
*: l10n_co_pos, l10n_fr_pos_cert, pos_restaurant, pos_self_order

Sequence management has been reworked. Here is how it now looks:
- `order_seq_id`: this sequence is used for all orders in the database.
- `order_backend_seq_id`: this sequence is used for all orders that are
created from something other than a Point of Sale, for example self-order
or a refund from the backend.
- `order_line_seq_id`: this sequence is used for all order lines in
the database.
- `device_seq_id`: this sequence is used to identify all devices that
will load the Point of Sale (separated by pos_config).

`pos_reference` are now created with this format: `000-0-000000`
- First part: Two-digit year
- Second part: PoS ID
- Third part: incremented sequence, minimum 6 digits (may be more).
This sequence is linked to the identity of the first part.

taskId: 5004675

--- a/addons/point_of_sale/views/pos_order_view.xml
+++ b/addons/point_of_sale/views/pos_order_view.xml
@@ -50,6 +50,7 @@
                 </div>
                 <group col="4" colspan="4" name="order_fields">
                     <field name="name"/>
+                    <field name="source" readonly="True" />
                     <field name="date_order"/>
                     <field name="session_id"  readonly="state != 'draft'"/>
                     <field string="User" name="user_id" readonly="account_move or state == 'done'"/>
