--- a/addons/point_of_sale/static/src/css/pos_receipts.css
+++ b/addons/point_of_sale/static/src/css/pos_receipts.css
@@ -28,7 +28,7 @@
     margin: 0 auto;
 }
 
-.pos-receipt .pos-receipt-contact {
+.pos-receipt .pos-receipt-contact, .pos-receipt .pos-receipt-customer {
     text-align: center;
     font-size: 75%;
 }
