--- a/addons/account/views/report_invoice.xml
+++ b/addons/account/views/report_invoice.xml
@@ -70,11 +70,17 @@
                                 <span t-elif="o.move_type == 'out_refund' and o.state == 'cancel'">
                                     <t name="cancelled_credit_note_title">Cancelled Credit Note</t>
                                 </span>
-                                <span t-elif="o.move_type == 'in_refund'">
+                                <span t-elif="o.move_type == 'in_refund' and not o.is_self_billing">
                                     <t name="vendor_credit_note_title">Vendor Credit Note</t>
                                 </span>
-                                <span t-elif="o.move_type == 'in_invoice'">
+                                <span t-elif="o.move_type == 'in_refund' and o.is_self_billing">
+                                    <t name="self_billing_credit_note_title">Self Billing Credit Note</t>
+                                </span>
+                                <span t-elif="o.move_type == 'in_invoice' and not o.is_self_billing">
                                     <t name="vendor_bill_title">Vendor Bill</t>
+                                </span>
+                                <span t-elif="o.move_type == 'in_invoice' and o.is_self_billing">
+                                    <t name="self_billing_invoice_title">Self Billing</t>
                                 </span>
                             </t>
                             <t t-else="">
